2006-06-04  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_list_length): Detect infinite lists
	(pair_write): Detect infinite lists
	(dfsch_list_length_check): Function with semantics similar to
	length in scheme - return length of given list, throw exception
	for anything else. Compiles now.

2006-06-03  Ales Hakl  <ales at hakl dot net>

	* src/number.c (dfsch_number_to_string): Number-specific write
	function
	(native_.*_2_.*): convert string to number and other way

2006-05-21  Ales Hakl  <ales at hakl dot net>

	* src/number.c: Rounding functions

2006-05-20  Ales Hakl  <ales at hakl dot net>

	* src/strings.c (dfsch_list_2_string): Fixed some warnings

	* src/dfsch.c: Fixed some warnings introduced by GC'd symbols
	Fixed some other warnings

	* src/parse.c (dispatch_atom): Allow numbers with leading +

	* src/dfsch.c: Fixed bug in string_hash
	(symbol_finalizer): GC'd symbols

2006-05-19  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_form_p): form? type predicate

	* dfsch/dfsch.h: Correct declarations in header for new list functions
	Corrected other broken headers.

	* src/dfsch.c (dfsch_reverse): list reversal function
	(dfsch_mem*) Membership checking functions

	* scm/test.scm: More tests

	* src/hash.c (native_make_hash): mode argument was ignored

	* src/number.c, dfsch/number.h: Comparison functions reimplemented 
	(native_max, native_min): max and min functions

	* src/number.c (native_even_p, native_odd_p): even? and odd?
	(dfsch__number_eqv_p): eqv? works correctly

	* scm/test.scm: Naming change

	* src/control.c (native_form_do): do iteration form

2006-05-18  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_obj_write): Better support for platforms with
	>32b word
	(closure_write): dtto.

	* src/number.c (native_acos, native_asin): inverse trigonometrics
	(native_atan): arcus tangent
	(native_sqrt): Square root
	(native_expt): Power (expt)
	(native_zero_p, native_positive_p, native_negative_p): some basic
	predicates
