@@ -1,10 +1,13 @@
 2006-06-04  Ales Hakl  <ales at hakl dot net>
 
+	* src/strings.c (dfsch_list_2_string): use dfsch_list_length_check
+
 	* src/dfsch.c (dfsch_list_length): Detect infinite lists
 	(pair_write): Detect infinite lists
 	(dfsch_list_length_check): Function with semantics similar to
 	length in scheme - return length of given list, throw exception
 	for anything else. Compiles now.
+	(dfsch_list_2_vector): use dfsch_list_length_check
 
 2006-06-03  Ales Hakl  <ales at hakl dot net>
 
